# tauri-examples

./: .gitignore  README.md
gif_record_example/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
gif_record_example/scripts/: record-gif.mjs
gif_record_example/scripts/gif_output/: .gitkeep
gif_record_example/src/: main.js
gif_record_example/src-tauri/: Cargo.toml  tauri.conf.json
gif_record_example/src-tauri/src/: lib.rs  main.rs
open_file_in_vscode/: README.md  index.html  package.json
open_file_in_vscode/src/: main.js
open_file_in_vscode/src-tauri/: Cargo.toml  tauri.conf.json
open_file_in_vscode/src-tauri/src/: lib.rs  main.rs
show_file_in_os_explorer/: README.md  index.html  package-lock.json  package.json  vite.config.js
show_file_in_os_explorer/src/: main.js
show_file_in_os_explorer/src-tauri/: Cargo.toml  tauri.conf.json
show_file_in_os_explorer/src-tauri/capabilities/: default.json
show_file_in_os_explorer/src-tauri/src/: lib.rs  main.rs
