[package]
name = "gif-recorder-example"
version = "1.0.0"
description = "Minimal example of GIF screen recording with Tauri"
authors = ["you"]
edition = "2021"

[lib]
name = "gif_recorder_example_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
