[package]
name = "open-file-in-vscode"
version = "0.1.0"
description = "A minimal Tauri example for opening files in VS Code at a specific line"
authors = ["you"]
edition = "2021"

[lib]
name = "open_file_in_vscode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
